--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240626172534">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240626175147">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 		<main class="page">
-			<section class="hero section-margin-bottom-lg">
+			<section class="hero hero-main section-margin-bottom-lg">
 				<div class="hero__container">
 					<div class="hero__body" data-prlx-mouse-wrapper>
 						<div class="hero__background-image">
@@ -694,9 +694,9 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20240626172534"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20240626175147"></script>
 
-	<script src="js/app.min.js?_v=20240626172534"></script>
+	<script src="js/app.min.js?_v=20240626175147"></script>
 
 </body>
 
