--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,16 @@
 	<title>HomePage</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240626172534">
+	<style>
+		body {
+			opacity: 0;
+		}
+
+		.loaded body {
+			opacity: 1;
+		}
+	</style>
+	<link rel="stylesheet" href="css/style.min.css?_v=20240629183113">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +25,7 @@
 		<header class="header header--black" data-scroll="300" data-scroll-show="">
 			<div class="header__container">
 				<div class="header__content">
-					<a href="#" class="header__logo logo-main"><img src="img/logo-main.png" alt="Logo Main Page"></a>
+					<a href="#" class="header__logo logo-main"><img src="img/logo-main.webp" alt="Logo Main Page"></a>
 					<div class="header__menu menu">
 
 
@@ -42,7 +50,7 @@
 									</a>
 								</li>
 							</ul>
-							<a href="#" class="header__logo logo-menu"><img src="img/logo-main.png" alt="Logo Main Page"></a>
+							<a href="#" class="header__logo logo-menu"><img src="img/logo-main.webp" alt="Logo Main Page"></a>
 							<ul>
 								<li>
 									<a href="#">
@@ -71,13 +79,13 @@
 
 						<div class="header__menu-illustration-background">
 							<div class="item item-01">
-								<img src="img/menu-berries/menu-berries-1.png" alt="Image">
+								<img src="img/menu-berries/menu-berries-1.webp" alt="Image">
 							</div>
 							<div class="item item-02">
-								<img src="img/menu-berries/menu-berries-2.png" alt="Image">
+								<img src="img/menu-berries/menu-berries-2.webp" alt="Image">
 							</div>
 							<div class="item item-03">
-								<img src="img/menu-berries/menu-berries-3.png" alt="Image">
+								<img src="img/menu-berries/menu-berries-3.webp" alt="Image">
 							</div>
 						</div>
 					</div>
@@ -122,7 +130,7 @@
 						Налаштування cookies
 					</a>
 					<a href="#" class="button button-lg button-primary">
-						Переглянути всі статті
+						Переглянути статтю
 					</a>
 				</div>
 			</div>
@@ -132,16 +140,20 @@
 				<div class="hero__container">
 					<div class="hero__body" data-prlx-mouse-wrapper>
 						<!-- <div class="hero__background-image backdrop-blur-md">
-                <img src="img/hero/hero-2.jpg" alt="Image">
+                <img src="img/hero/hero-2.webp" alt="Image">
               </div> -->
 						<div class="hero__content">
-							<h1 class="heading-h1--big font-extrabold leading-tight text-left md:mb-10 mb-6">
-								Блог
-							</h1>
-							<div class="main-text">
-								<p>
-									Ґрисована продукція використовується у харчовій, переробній, хімічній та косметичній промисловості. Ґрисована продукція використовується у харчовій, переробній, хімічній та косметичній промисловості. Ґрисована продукція. Ґрисована продукція
-								</p>
+							<div class="overflow-hidden">
+								<h1 class="heading-h1--big hero__title font-extrabold leading-tight text-left md:mb-10 mb-6">
+									Блог
+								</h1>
+							</div>
+							<div class="overflow-hidden">
+								<div class="main-text">
+									<p>
+										Ґрисована продукція використовується у харчовій, переробній, хімічній та косметичній промисловості. Ґрисована продукція використовується у харчовій, переробній, хімічній та косметичній промисловості. Ґрисована продукція. Ґрисована продукція
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -189,7 +201,7 @@
 											</div>
 											<a href="#" class="post-blog__button button-group-with-arrow">
 												<div class="button button-lg button-primary">
-													Переглянути всі статті
+													Переглянути статтю
 												</div>
 												<button type="button" class="button button-arrow">
 													<div class="button-arrow__wrap">
@@ -227,7 +239,7 @@
 											</div>
 											<a href="#" class="post-blog__button button-group-with-arrow">
 												<div class="button button-lg button-primary">
-													Переглянути всі статті
+													Переглянути статтю
 												</div>
 												<button type="button" class="button button-arrow">
 													<div class="button-arrow__wrap">
@@ -265,7 +277,7 @@
 											</div>
 											<a href="#" class="post-blog__button button-group-with-arrow">
 												<div class="button button-lg button-primary">
-													Переглянути всі статті
+													Переглянути статтю
 												</div>
 												<button type="button" class="button button-arrow">
 													<div class="button-arrow__wrap">
@@ -303,7 +315,7 @@
 											</div>
 											<a href="#" class="post-blog__button button-group-with-arrow">
 												<div class="button button-lg button-primary">
-													Переглянути всі статті
+													Переглянути статтю
 												</div>
 												<button type="button" class="button button-arrow">
 													<div class="button-arrow__wrap">
@@ -341,7 +353,7 @@
 											</div>
 											<a href="#" class="post-blog__button button-group-with-arrow">
 												<div class="button button-lg button-primary">
-													Переглянути всі статті
+													Переглянути статтю
 												</div>
 												<button type="button" class="button button-arrow">
 													<div class="button-arrow__wrap">
@@ -489,13 +501,13 @@
 										<span class="mb-5 block">Система харчової безпеки CCM MS Standart </span>
 										<ul>
 											<li>
-												<img src="img/certificates/01.png" alt="Certificate">
+												<img src="img/certificates/01.webp" alt="Certificate">
 											</li>
 											<li>
-												<img src="img/certificates/02.png" alt="Certificate">
+												<img src="img/certificates/02.webp" alt="Certificate">
 											</li>
 											<li>
-												<img src="img/certificates/03.png" alt="Certificate">
+												<img src="img/certificates/03.webp" alt="Certificate">
 											</li>
 										</ul>
 									</div>
@@ -503,13 +515,13 @@
 										<span class="mb-5 block">Продукція сертифікована:</span>
 										<ul>
 											<li>
-												<img src="img/certificates/04.png" alt="Certificate">
+												<img src="img/certificates/04.webp" alt="Certificate">
 											</li>
 											<li>
-												<img src="img/certificates/05.png" alt="Certificate">
+												<img src="img/certificates/05.webp" alt="Certificate">
 											</li>
 											<li>
-												<img src="img/certificates/06.png" alt="Certificate">
+												<img src="img/certificates/06.webp" alt="Certificate">
 											</li>
 										</ul>
 									</div>
@@ -525,7 +537,7 @@
 							<span>
 								Розробка —
 							</span>
-							<img src="img/icons/mozar.png" alt="Image Develop">
+							<img src="img/icons/mozar.webp" alt="Image Develop">
 						</a>
 					</div>
 				</div>
@@ -547,7 +559,9 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20240626172534"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js?_v=20240629183113"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js?_v=20240629183113"></script>
+	<script src="js/app.min.js?_v=20240629183113"></script>
 </body>
 
 </html>
