--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			opacity: 1;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20240630142855">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240701164725">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -153,19 +153,19 @@
 							</h1>
 						</div>
 						<div class="hero__parallax-items">
-							<div class="hero-item item item-01">
+							<div class="hero-item item item-01 box">
 								<img src="img/hero/berries/berries-1.webp" alt="Image Berries 01" data-prlx-mouse data-prlx-dyr data-prlx-dxr data-prlx-cx="50" data-prlx-cy="50">
 							</div>
-							<div class="hero-item item item-02">
+							<div class="hero-item item item-02 box">
 								<img src="img/hero/berries/berries-2.webp" alt="Image Berries 02" data-prlx-mouse data-prlx-dyr data-prlx-dxr>
 							</div>
-							<div class="hero-item item item-03">
+							<div class="hero-item item item-03 box">
 								<img src="img/hero/berries/berries-3.webp" alt="Image Berries 03" data-prlx-mouse>
 							</div>
-							<div class="hero-item item item-04">
+							<div class="hero-item item item-04 box">
 								<img src="img/hero/berries/berries-4.webp" alt="Image Berries 04" data-prlx-mouse data-prlx-dyr data-prlx-dxr>
 							</div>
-							<div class="hero-item item item-05">
+							<div class="hero-item item item-05 box">
 								<img src="img/hero/berries/berries-5.webp" alt="Image Berries 05" data-prlx-mouse>
 							</div>
 						</div>
@@ -535,7 +535,7 @@
 
 						</div>
 						<div class="main-products__list list-products__list">
-							<a href="cart.html" class="main-products__product list-products__product product product-1" data-slide="1">
+							<a href="cart.html" class="main-products__product list-products__product product product-1 box-end" data-slide="1">
 								<div class="product__body">
 									<div class="product__image">
 										<figure>
@@ -548,7 +548,7 @@
 									</div>
 								</div>
 							</a>
-							<a href="cart.html" class="main-products__product list-products__product product product-2" data-slide="2">
+							<a href="cart.html" class="main-products__product list-products__product product product-2 box-end" data-slide="2">
 								<div class="product__body">
 									<div class="product__image">
 										<figure>
@@ -561,7 +561,7 @@
 									</div>
 								</div>
 							</a>
-							<a href="cart.html" class="main-products__product list-products__product product product-3" data-slide="3">
+							<a href="cart.html" class="main-products__product list-products__product product product-3 box-end" data-slide="3">
 								<div class="product__body">
 									<div class="product__image">
 										<figure>
@@ -574,7 +574,7 @@
 									</div>
 								</div>
 							</a>
-							<a href="cart.html" class="main-products__product list-products__product product product-4" data-slide="4">
+							<a href="cart.html" class="main-products__product list-products__product product product-4 box-end" data-slide="4">
 								<div class="product__body">
 									<div class="product__image">
 										<figure>
@@ -587,7 +587,7 @@
 									</div>
 								</div>
 							</a>
-							<a href="cart.html" class="main-products__product list-products__product product product-5" data-slide="5">
+							<a href="cart.html" class="main-products__product list-products__product product product-5 box-end" data-slide="5">
 								<div class="product__body">
 									<div class="product__image">
 										<figure>
@@ -983,9 +983,9 @@
 	</div>
 
 
-	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js?_v=20240630142855"></script>
-	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js?_v=20240630142855"></script>
-	<script src="js/app.min.js?_v=20240630142855"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js?_v=20240701164725"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js?_v=20240701164725"></script>
+	<script src="js/app.min.js?_v=20240701164725"></script>
 
 </body>
 
