--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 			opacity: 1;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20240701164725">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240701214813">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -114,7 +114,7 @@
 				</div>
 			</div>
 		</header>
-		<div class="cookies-modal" style="display: none;">
+		<div class="cookies-modal" id="cookiesModal">
 			<div class="cookies-modal__body">
 				<div class="subheading mb-2">
 					Конфіденційність
@@ -129,8 +129,8 @@
 					<a href="#" class="button link">
 						Налаштування cookies
 					</a>
-					<a href="#" class="button button-lg button-primary">
-						Переглянути статтю
+					<a href="#" class="button button-lg button-primary button-close-modal-cookies">
+						Ок
 					</a>
 				</div>
 			</div>
@@ -559,9 +559,9 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js?_v=20240701164725"></script>
-	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js?_v=20240701164725"></script>
-	<script src="js/app.min.js?_v=20240701164725"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js?_v=20240701214813"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js?_v=20240701214813"></script>
+	<script src="js/app.min.js?_v=20240701214813"></script>
 </body>
 
 </html>
