--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			opacity: 1;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20240701221826">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240701233227">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -174,7 +174,7 @@
 					</div>
 				</section>
 				<!-- /.hero -->
-				<div class="first-section__container relative lg:block !hidden">
+				<div class="first-section__container relative lg:!block hidden">
 					<div class="hero__parallax-items">
 						<div class="hero-item item item-01 box">
 							<img src="img/hero/berries/berries-1.webp" alt="Image Berries 01" data-prlx-mouse data-prlx-dyr data-prlx-dxr data-prlx-cx="50" data-prlx-cy="50">
@@ -1006,9 +1006,9 @@
 	</div>
 
 
-	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js?_v=20240701221826"></script>
-	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js?_v=20240701221826"></script>
-	<script src="js/app.min.js?_v=20240701221826"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js?_v=20240701233227"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js?_v=20240701233227"></script>
+	<script src="js/app.min.js?_v=20240701233227"></script>
 
 </body>
 
